# tiny-str-match

./: README.md  meson.build
include/: str_match.h
src/: re.c  re.h  utf.c  utf.h  wildcard.c
tests/: main.cpp  meson.build  re_test.h  wildcard_test.h
